# gpanel

./: LICENCE  README.md  setup.cfg
examples/: colors_1.py  coordinates2.py  coordinates_1.py  coordinates_3.py  global_panel.py  graph.py  lines2.py  lines3.py  lines_1.py  shapes1.py  shapes2.py  shapes3.py
gpanel/: Circle.py  Element.py  EventHandler.py  Line.py  Panel.py  Rect.py  Rectangle.py  __init__.py  mouse.py
