[metadata]
name = gpanel
version = 0.0.1
author = Stefan Rothe
author_email = stefan.rothe@gymkirchenfeld.ch
description = A Tkinter-based 2D graphics package for education
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0the/gpanel
project_urls =
    Bug Tracker = https://github.com/r0the/gpanel/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
